fix column widths, text wrap and scroll bar

--- a/sam-styles/modal/_modal.scss
+++ b/sam-styles/modal/_modal.scss
@@ -11,7 +11,7 @@
 .primary-model-body {
   background: #112e51;
   padding-left: 2em;
-  vertical-align: top;
+  
   display: block;
 
   .sam-primary-title{
